# Stage-Ahmed

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  run_standalone.sh  setup.py
.claude/: settings.local.json
app/: i18n.py  main.py  session_keys.py
app/assets/: style.css
app/components/: file_uploader.py  material_selector.py  result_table.py  sidebar.py  sn_curve_plot.py  summary_panels.py
app/pages/: 01_material_database.py  02_fatigue_analysis.py  03_shock_analysis.py  04_fea_postprocessing.py  05_report_generation.py  06_multiaxial_assessment.py  07_fracture_mechanics.py  08_vibration_fatigue.py  09_weld_quality.py
app/views/: __init__.py  fracture_view.py  multiaxial_view.py  vibration_view.py  weld_quality_view.py
docs/: architecture.md  iiw_methods.md  methodologie_fatigue_et_impact_FR.md  methodology_fatigue_and_impact.md  user_guide.md  validation_report.md
notebooks/: 01_material_database_demo.ipynb  02_sn_curve_exploration.ipynb  03_nominal_stress_benchmark.ipynb  04_hotspot_stress_benchmark.ipynb  05_notch_stress_example.ipynb  06_miner_damage_calculation.ipynb  07_mean_stress_corrections.ipynb  08_crash_strain_rate_effects.ipynb  09_fea_csv_workflow.ipynb  10_full_assessment_pipeline.ipynb
src/weldfatigue/: __init__.py
tests/: conftest.py
tests/fixtures/: sample_load_spectrum.csv  sample_stress_results.csv
tests/test_fatigue/: test_assessment.py  test_damage.py  test_environmental.py  test_fat_classes.py  test_four_r_method.py  test_fracture_mechanics.py  (+14 more)
(+76 files in other folders)
